<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="label_cases">Cases</string>
    <string name="label_settings">Settings</string>
    <string name="label_global_cases">Global</string>
    <string name="label_confirmed">Confirmed</string>
    <string name="label_deaths">Deaths</string>
    <string name="label_recovered">Recovered</string>
    <string name="label_default_number">0</string>
    <string name="label_view_all_countries">VIEW ALL COUNTRIES</string>
    <string name="label_back_to_global_window">Back to global window</string>
    <string name="label_countries">Countries</string>
    <string name="label_list_of_countries_region_sovereignty">List of Countries/Region/Sovereignty</string>

    <!--  Navigation Drawer  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Tag Fragments  -->
    <string name="tag_fragment_global">tag_fragment_global</string>
    <string name="tag_fragment_countries">tag_fragment_countries</string>
    <string name="tag_fragment_philippines">tag_fragment_philippines</string>
    <string name="tag_fragment_drop">tag_fragment_drop</string>
    <string name="tag_fragment_cases">tag_fragment_cases</string>
    <string name="tag_fragment_more">tag_fragment_more</string>

    <!--  Intent and Bundle Extras  -->
    <string name="intent_global_cases">"intent_global_cases"</string>
    <string name="intent_global_deaths">"intent_global_deaths"</string>
    <string name="intent_global_recovered">"intent_global_recovered"</string>
    <string name="intent_global">"intent_global"</string>
    <string name="intent_countries">"intent_countries"</string>

    <string name="label_dialog_ok">Ok</string>
    <string name="label_dialog_cancel">Cancel</string>
    <string name="label_dialog_continue">Continue</string>
    <string name="label_dialog_exit">Exit</string>
    <string name="label_collapse_arrow">Collapse Arrow</string>
    <string name="label_today_deaths">Today\'s Deaths:</string>
    <string name="label_today_cases">Today\'s Cases:</string>
    <string name="label_critical">Critical:</string>
    <string name="label_active">Active:</string>
    <string name="label_color_for_deaths">Color for Deaths</string>
    <string name="label_color_for_recovered">Color for recovered</string>
    <string name="label_color_for_confirmed">Color for Confirmed</string>
    <string name="label_sort_countries">Sort Countries</string>
    <string name="label_search">Search</string>
    <string name="confirmed_icon">Confirmed Icon</string>
    <string name="recovered_icon">Recovered Icon</string>
    <string name="deaths_icon">Deaths Icon</string>
    <string name="new_cases_icon">New Cases Icon</string>
    <string name="active_icon">Active Icon</string>
    <string name="new_deaths_icon">New Deaths Icon</string>
    <string name="label_new_cases">New Cases</string>
    <string name="label_actives">Active</string>
    <string name="label_new_deaths">New Deaths</string>
    <string name="label_chart_overview">Covid-19 Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_fragment_selected_country">tag_fragment_selected_country</string>
    <string name="label_global_total_cases">Global total aCases</string>
    <string name="label_top_countries_cases">Top countries with daily new aCases</string>


</resources>
