<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_global_cases"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/title_cases"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/label_confirmed"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/title_cases"
            android:layout_toRightOf="@+id/title_cases"
            android:gravity="end"
            android:hint="@string/label_default_number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/title_deaths"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/label_deaths"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/title_deaths"
            android:layout_toRightOf="@+id/title_deaths"
            android:gravity="end"
            android:hint="@string/label_default_number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/title_recovered"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/label_recovered"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/title_recovered"
            android:layout_toRightOf="@+id/title_recovered"
            android:gravity="end"
            android:hint="@string/label_default_number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>