<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="16dp">


    <TextView
        android:id="@+id/title_global"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_global_cases"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_confirmed"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_confirmed"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_global" />

    <TextView
        android:id="@+id/tv_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toEndOf="@+id/title_confirmed"
        android:layout_toRightOf="@+id/title_confirmed"
        android:gravity="end"
        android:hint="@string/label_default_number"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_confirmed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_confirmed" />


    <TextView
        android:id="@+id/title_deaths"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/label_deaths"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/title_confirmed"
        app:layout_constraintTop_toBottomOf="@+id/title_confirmed" />

    <TextView
        android:id="@+id/tv_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/title_deaths"
        android:layout_toRightOf="@+id/title_deaths"
        android:gravity="end"
        android:hint="@string/label_default_number"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_deaths"
        app:layout_constraintEnd_toEndOf="@+id/tv_cases"
        app:layout_constraintTop_toTopOf="@+id/title_deaths"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/title_recovered"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/label_recovered"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/title_deaths"
        app:layout_constraintTop_toBottomOf="@+id/title_deaths" />

    <TextView
        android:id="@+id/tv_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/title_recovered"
        android:layout_toRightOf="@+id/title_recovered"
        android:gravity="end"
        android:hint="@string/label_default_number"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_recovered"
        app:layout_constraintEnd_toEndOf="@+id/tv_deaths"
        app:layout_constraintTop_toTopOf="@+id/title_recovered" />


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_global_cases"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_recovered"
        app:layout_constraintStart_toStartOf="@+id/title_recovered"
        app:layout_constraintTop_toBottomOf="@+id/title_recovered"
        app:layout_constraintVertical_bias=".30" />

    <TextView
        android:id="@+id/tv_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chart_global_cases"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/chart_global_cases"
        app:layout_constraintStart_toStartOf="@+id/chart_global_cases"
        app:layout_constraintTop_toBottomOf="@+id/chart_global_cases" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_view_all_countries"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_update_date"
        android:background="@color/shimmer_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chart_global_cases"
        app:layout_constraintStart_toStartOf="@+id/chart_global_cases"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_date">

        <TextView
            android:id="@+id/btn_view_all_countries_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_view_all_countries"
            android:textColor="#000"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>