<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_countries_fade_scale"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_countries_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_countries_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/imb_countries_collapse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Philippines" />


            <LinearLayout
                android:id="@+id/constraint_countries_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:weightSum="9"
                app:layout_constraintEnd_toEndOf="@+id/tv_countries_country"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_countries_country">


                <ImageView
                    android:id="@+id/imb_countries_dotted_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/label_confirmed"
                    android:src="@drawable/legends_dotted_one" />

                <TextView
                    android:id="@+id/tv_countries_confirmed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="3,123,564" />


                <ImageView
                    android:id="@+id/imb_countries_dotted_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/label_deaths"
                    android:src="@drawable/legends_dotted_two" />


                <TextView
                    android:id="@+id/tv_countries_deaths"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="632,322" />


                <ImageView
                    android:id="@+id/imb_countries_dotted_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/label_recovered"
                    android:src="@drawable/legends_dotted_three" />


                <TextView
                    android:id="@+id/tv_countries_recovered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="645,645" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_countries_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_countries_header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_countries_to_fade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/tv_countries_deaths_today_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_today_deaths"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_countries_deaths_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toEndOf="@id/tv_countries_deaths_today_label"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="3" />

                    <TextView
                        android:id="@+id/tv_countries_cases_today_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_today_cases"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_deaths_today_label" />

                    <TextView
                        android:id="@+id/tv_countries_cases_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toEndOf="@id/tv_countries_cases_today_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_deaths_today"
                        tools:text="23" />

                    <TextView
                        android:id="@+id/tv_countries_critical_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_critical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_cases_today_label" />


                    <TextView
                        android:id="@+id/tv_countries_critical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toEndOf="@id/tv_countries_critical_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_cases_today"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/tv_countries_active_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_active"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_critical_label" />

                    <TextView
                        android:id="@+id/tv_countries_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toEndOf="@id/tv_countries_active_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_countries_critical"
                        tools:text="6,321" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imb_countries_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/label_collapse_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_countries_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_countries_country"
                app:srcCompat="@drawable/ic_expand_less" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>